# PropCalc

./: .cursorrules  .gitignore  CHANGELOG.md  CODEBASE_ANALYSIS_SUMMARY.md  CRITICAL_TODO_TASKS.md  README.md  deploy-production.sh  deploy.sh  docker-compose.yml  env.example  health-check.sh  nginx.conf
backend/: .env.example  AUTH_README.md  CLEANUP_SUMMARY.md  CRAWLER_IMPLEMENTATION_SUMMARY.md  Dockerfile  README.md  alembic.ini  create_area_mapping.sql  demo_crawler.py  deploy_crawler_production.sh  docker-compose.yml  env.example  load_kml_to_database.py  main.py  populate_area_analytics.sql  process_kml_files.py  pyproject.toml  setup_dld_kml_integration.py  simple_populate_analytics.sql  start_server.py  test.env  test_api.py  test_auth.py  test_auth_debug.py  test_crawler_simple.py  test_db_connection.py  test_simple.env  test_small_crawl.py
backend/.github/workflows/: ci-cd.yml
backend/aiohttp/: __init__.py
backend/alembic/: env.py
backend/alembic/versions/: 001_enhanced_data_sources.py  002_add_user_models.py  003_create_property_tables.py
backend/data/processed/: 01_raw_data.json  02_cleaned_data.json  03_enriched_data.json  sample_dld_data_enriched_data.csv  sample_dld_data_error_report.json  sample_dld_data_final_report.json  sample_dld_data_summary.csv
backend/scripts/: Dockerfile  seed.py
backend/sql/: init.sql
backend/src/propcalc/: __init__.py  main.py
backend/src/propcalc/ai_workers/: __init__.py  scoring_logic.py
backend/src/propcalc/api/: __init__.py  ai.py  analytics.py  area_mapping_routes.py  auth.py  auth_backup.py  comprehensive_dld_routes.py  crawler_api.py  developer.py  dld_kml_routes.py  dld_routes.py  gdpr.py  kml_routes.py  market_demo_routes.py  market_routes.py  normalization_routes.py  pipeline_routes.py  projects_routes.py  real_dld_routes.py  realtime_dld_routes.py  system.py  unified_dld_routes.py  vantage_score_demo.py
backend/src/propcalc/api/v1/: __init__.py  router.py
backend/src/propcalc/api/v1/endpoints/: __init__.py  analytics.py  dld.py  health.py  kml.py
backend/src/propcalc/config/: __init__.py  crawler_config.py  settings.py
backend/src/propcalc/core/: __init__.py  area_mapping_service.py  comprehensive_dld_loader.py  data_quality.py  data_quality_improver.py  dld_ingestion.py  dld_kml_integration.py  enhanced_analytics.py  enhanced_data_import.py  error_handling.py  exceptions.py  kml_database_integration.py  kml_geospatial_processor.py  kml_processor.py  logging.py  metrics.py  normalization_lookup.py  optimized_data_quality_improver.py  real_data_processor.py  scheduled_dld_ingestion.py
backend/src/propcalc/core/ai_workers/: __init__.py  enhanced_scoring.py  enhanced_vantage_score.py  experiment_manager.py  model_monitoring.py  scoring_logic.py  train_model.py
backend/src/propcalc/core/crawlers/: __init__.py  base_crawler.py  bayut_crawler.py  crawler_manager.py  property_finder_crawler.py
backend/src/propcalc/core/performance/: __init__.py  cache_manager.py  connection_pool.py  rate_limiter.py
backend/src/propcalc/core/security/: jwt_manager.py
backend/src/propcalc/domain/: __init__.py  schemas.py
backend/src/propcalc/domain/models/: __init__.py  project.py  property_models.py  security_models.py  transaction.py  user.py
backend/src/propcalc/domain/security/: __init__.py  gdpr.py  oauth2.py
backend/src/propcalc/infrastructure/cache/: __init__.py  redis_cache.py
backend/src/propcalc/infrastructure/database/: __init__.py  database.py  enhanced_schema_v2.sql  models.py  postgres_db.py  simple_db.py
backend/src/propcalc/infrastructure/repositories/: base.py  dld_repository.py  user_repository.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_comprehensive_dld_loader.py  test_dld_ingestion.py  test_dld_integration.py  test_main.py  test_settings.py
backend/tests/performance/: test_load.py
data/frontend/: next.config.js  sentry.edge.config.ts
data/frontend/src/: instrumentation-client.ts
data/frontend/src/app/: layout.tsx  page.tsx
data/frontend/src/components/: DLDAnalyticsCharts.tsx
data/frontend/src/contexts/: AuthContext.tsx
data/frontend/src/hooks/: useApi.ts
frontend/: Dockerfile  FRONTEND_QUALITY_REPORT.md  config.server.ts  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/dld-analytics/: page.tsx
frontend/src/app/dld-comparison/: page.tsx
frontend/src/app/dld-market-intelligence/: page.tsx
frontend/src/app/dld-market-trends/: page.tsx
frontend/src/app/dld-portfolio/: page.tsx
frontend/src/app/dld-reports/: page.tsx
frontend/src/app/dld-settings/: page.tsx
frontend/src/app/dld-transactions/: page.tsx
frontend/src/app/dld-upload/: page.tsx
frontend/src/app/dld-valuation/: page.tsx
frontend/src/app/kml-viewer/: page.tsx
frontend/src/components/: Dashboard.tsx  KMLMapViewer.tsx  ProductionDashboard.tsx  ShapWaterfallChart.tsx  TransactionUpload.tsx  VantageScoreDashboard.tsx
monitoring/: prometheus.yml
(+27 files in other folders)
