[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "propcalc-backend"
version = "2.1.0"
description = "Advanced Real Estate Analytics Platform with AI-powered insights - STABLE RELEASE"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
    {name = "PropCalc Team", email = "team@propcalc.ai"}
]
keywords = ["real-estate", "analytics", "ai", "machine-learning", "dubai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.25",
    "pandas>=2.2.0",
    "numpy>=1.24.0",
    # scikit-learn is optional at import-time; tests do not require training
    # "scikit-learn>=1.4.0",
    "pyjwt>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "sentry-sdk[fastapi]>=1.38.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
    "email-validator>=2.2.0",
    "apscheduler>=3.10.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "alembic>=1.16.4",
    "aiofiles>=23.2.1",
    "unidecode>=1.4.0",
    "greenlet>=3.2.3",
    "scikit-learn>=1.7.1",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "parquet>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "httpx>=0.25.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://propcalc.ai"
Documentation = "https://docs.propcalc.ai"
Repository = "https://github.com/propcalc/backend"
Issues = "https://github.com/propcalc/backend/issues"

[project.scripts]
propcalc = "propcalc.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/propcalc"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["propcalc"]
known_third_party = ["fastapi", "uvicorn", "pydantic", "sqlalchemy", "asyncpg", "redis", "pandas", "numpy", "sklearn", "aiohttp", "jwt", "passlib", "sentry_sdk", "prometheus_client", "psutil"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "redis.*",
    "asyncpg.*",
    "sentry_sdk.*",
    "prometheus_client.*",
    "psutil.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/propcalc"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

